# SmartKnob-rp2040-firmware

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  configuration.cpp  configuration.h  display_task.cpp  display_task.h  interface_task.cpp  interface_task.h  main.c  main.cpp  motor_task.cpp  motor_task.h  mt6701_sensor.cpp  mt6701_sensor.h  semaphore_guard.h  task.h  tlv_sensor.cpp  tlv_sensor.h
src/motors/: motor_config.h
src/proto_gen/: smartknob.pb.c  smartknob.pb.h
src/serial/: serial_protocol_plaintext.cpp  serial_protocol_plaintext.h  serial_protocol_protobuf.cpp  serial_protocol_protobuf.h  uart_stream.cpp  uart_stream.h
